Call to action fix on mobile

--- a/style.css
+++ b/style.css
@@ -438,6 +438,13 @@ p {
   gap: var(--space-m);
 }
 
+@media (min-width: 576px) {
+  .call-to-action {
+    grid-template-columns: 1fr;
+    gap: none;
+  }
+}
+
 .button {
   text-transform: uppercase;
   text-align: center;
